[package]
name = "slog-bunyan"
version = "2.2.0"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Bunyan formatter for slog-rs"
keywords = ["log", "logging", "structured", "hierarchical"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-bunyan"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/bunyan"
readme = "README.md"

[lib]
path = "lib.rs"

[dependencies]
slog = "2"
slog-json = "2"
chrono = "0.3.0"
hostname = "0.1.5"
