[package]
name = "slog-bunyan"
version = "2.5.0"
edition = "2021"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Bunyan formatter for slog-rs"
keywords = ["log", "logging", "structured", "hierarchical"]
license = "MPL-2.0"
documentation = "https://docs.rs/slog-bunyan"
homepage = "https://github.com/slog-rs/slog"
repository = "https://github.com/slog-rs/bunyan"
readme = "README.md"

# This is our Minimum Supported Rust Version (MSRV)
#
# Please do not bump this unnecessarily.
# Changing this bumps the minor version for semver (2.x for semver).
#
# NOTE: Changing this requires updating github actions
rust-version = "1.59"

[lib]
path = "lib.rs"

[dependencies]
slog = "2"
slog-json = "2.6"
hostname = "0.3.0"
time = { version = "0.3.15", features = ["formatting", "local-offset", "macros"] }

[features]
nested-values = ["slog-json/nested-values"]
